[package]
name = "rust_nn_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ndarray = { version = "0.15.6", features = ["serde"] }
num-integer = "0.1.45"
polars = { version = "0.35.4", features = ["lazy", "ndarray"] }
rand = "0.8.5"
serde_json = "1.0.108"
